# space-invaders

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix  index.html
.cargo/: config.toml
.github/workflows/: publish.yml
scripts/: build.sh  serve.sh
src/: audio.rs  camera.rs  constants.rs  enemy.rs  enemy_squad.rs  game_over.rs  hud.rs  main.rs  menu.rs  player.rs  projectiles.rs  score.rs  shield.rs  shots.rs  ui.rs  wall.rs
