[package]
name = "bevy-space-invaders"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bitflags = "2.9.0"
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
